style.css
/* custom fonts */
@import url("https://fonts.googleapis.com/css2?family=Comfortaa&family=MuseoModerno&family=Source+Code+Pro&display=swap");

/* general styling */
:root {
	--accent: #b71c4a;
	--pcol: #35b091;
	--scol: #002b3ace;
	--tcol: #0c354262;
}
/* dark theme */
/*:root {
	--accent: #802;
	--pcol: #625;
	--scol: #202;
	--tcol: #b692;
}*/
/*
:root {
	--accent: #c44;
	--pcol: #646;  548
	--scol: #002;
	--tcol: #8791; ecf2
}*/
* {
	scrollbar-color: var(--accent)#0000;
	scroll-behavior: smooth;
	scrollbar-width: thin;
}
::-webkit-scrollbar {background: #0000}
::-webkit-scrollbar-track {background: #0000}
::-webkit-scrollbar-thumb {background: var(--tcol)}
::-webkit-scrollbar-thumb:hover {background: var(--pcol)}
::selection {color: var(--pcol); background: var(--accent)}
body {
	background: url("/ass/bg/arches.webp") top / cover fixed, url("/ass/bg/waw.webp") repeat center / 200% fixed #420924;
	background-blend-mode: difference, darken;
	color: var(--pcol);
	font-family: Comfortaa, Verdana;
	margin: 0;
	animation: show 0.5s ease-out;
}
h1 {
	background: var(--scol);
	color: var(--pcol);
	font-size: 2em;
}
h1, h2 {
	padding: 0.25em;
	font-family: "MuseoModerno";
	mix-blend-mode: difference;
}
hr {
	border: solid var(--tcol);
	padding: 2px;
	border-width: 3px 8px;
}
p {
	font-size: 1.0em;
	padding: 0.5em;
	width: clamp(0, 1.25em, 75ch);
	text-align: justify;
}
img {
	width: clamp(1em, 16em, 100%);
	height: auto;
}
a {
	color: var(--accent);
	text-decoration-style: dashed;
}
a:focus-visible, a:hover {
	text-decoration-style: solid;
}
button {
	box-sizing: border-box;
	border: solid var(--scol);
	border-width: 0 0 6px;
	color: var(--scol);
	display: block;
	transition: 0.05s;
	font-size: 1.25em;
}
button:focus, button:hover {
	border-width: 2px 0 4px;
}
button:active {
	border-width: 6px 0 0;
}
pre {
	font: 1.5em monospace;
}
input[type=range] {
	accent-color: var(--accent);
	cursor: pointer;
}
code {
	font-family: monospace;
	padding: 0 6px;
	color: var(--pcol);
	background: var(--scol);
	border: var(--scol) solid;
	border-width: 0.125em 0;
}
a:focus-visible {
	outline-offset: 4px;
}
small {
	font-size: 1em;
}

/* elements and classes with the same rules (grouping them together saves up space MOST of the time) */
.pixelart, canvas {
	image-rendering: pixelated;
}
#img0bg, .card h2, .neon, .neonu, .palette, .showcase, .showcase canvas, .spoiler, .tabl, a, button, div.card, div.base, h1, hr, img, code, p {
	border-radius: 0.5em;
}
#caption, .center, .color, .tag, h1, h2, .tabl * {
	text-align: center;
}
button, p {
	background: var(--tcol);
}
.center, .img0, .modal, .smol, .content {
	margin-left: auto;
	margin-right: auto;
}
#close, .color, .spoiler {
	cursor: pointer;
}
#img0, .spoiler, button {
	user-select: none;
}
.spoiler:focus-visible, a:focus-visible, button:focus-visible {
	outline: var(--accent)solid 4px;
}

/* general classes */
div.base {
	margin: 0 auto;
	width: 70%;
	position: relative;
	padding: 0;
	box-sizing: border-box;
	overflow: hidden;
}
.bordr {
	border: 0.5em solid var(--scol);
}
.center {
	display: block;
}
.back {
	font-size: 1.5em;
	margin: 1em auto auto;
}
.neon {
	color: var(--pcol);
	font-size: 2em;
	text-shadow: var(--pcol) 0 0 6px;
	box-shadow: var(--pcol) 0 0 8px;
	background: var(--scol);
	border: var(--pcol) 0.15rem solid;
	text-decoration: none;
	padding: 0.1rem;
	transition: 0.05s;
}
.neon:hover {
	text-shadow: 0 0 10px;
	box-shadow: 0 0 20px;
}
.neon:active {
	text-shadow: 0 0 9px;
	box-shadow: 0 0 16px;
}
.neon {
	text-orientation: upright;
	writing-mode: vertical-rl;
	padding: 0.25em 0;
}
.smol, .content {
	width: clamp(35ch, 95%, 70ch);
}
.spoiler {
	background: var(--scol);
}
.spoiler img {
	opacity: 0;
}
.spoiler::before {
	content: url("ass/eye.svg") "lmao";
	text-align: center;
	font-size: 2em;
	display: flex;
	align-items: center;
	justify-content: center;
	height: 100%;
	pointer-events: none;
}
/*.spoiler {
	background: var(--scol);
	transition: 0.4s;
	display: inline;
	background: var((--scol));
}
.spoiler * {
	opacity: 0;
	transition: 0.2s;
}
.spoiler:focus *, .spoiler:hover * {
	opacity: 1;
}
.spoiler:focus, .spoiler:hover {
	background: #0000;
}*/
/* .showcase .spoiler:has(img){} */
.flex {
	display: flex;
	flex-wrap: wrap;
	gap: 0.5em;
	justify-content: space-around;
	padding: 5px;
}
img.pixelart {
	width: round(nearest, attr(width type(length)), 64px) !important;
	height: round(nearest, attr(height type(length)), 64px) !important;
}
/* portfolio stuff */
.showcase {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 0.5em;
	padding: 0.5em;
}
.showcase img {
	outline: 0 double var(--accent);
	transition: .15s, opacity .5s;
	object-fit: cover;
	box-sizing: border-box;
}
.showcase img:focus, .showcase img:hover {
	outline: 0.5em solid var(--accent);
	cursor: pointer;
}
.showcase img:active {
	outline-offset: 0.5em;
}
.viewport {
	height: auto;
	display: block;
}
.viewport canvas {
	width: 100%;
}
.showcase img, .viewport, .spoiler {
	flex: 0 0 16em;
}
#modal {
	display: none;
	z-index: 1;
	height: 100%;
	width: 100%;
	position: fixed;
	top: 0;
	background: #011e;
	overflow: scroll;
	animation: show 0.5s;
}
#img0bg {
	height: 100%;
	animation: zoom 0.5s;
}
#img0 {
	height: 100%;
	width: auto;
	border-radius: 0;
	display: block;
}
#caption {
	font-size: 1.5em;
	color: var(--accent);
	margin: 0;
	text-shadow: var(--pcol) 0 3px;
	border-radius: 0 0 0.5em 0.5em;
	animation: show 1s ease-in;
}
#caption a {
	text-shadow: var(--pcol) 0 3px;
}
@keyframes zoom {
	0% {transform: scale(0.6)}
	to {transform: scale(1)}
}
@keyframes show {
	0% {opacity: 0}
	to {opacity: 1}
}
@keyframes hide {
	0% {opacity: 1}
	to {opacity: 0}
}

/* tools stuff */
.palette {
	display: flex;
	overflow: hidden;
	flex-wrap: wrap;
	max-width: 32em;
}
.color {
	width: 4em;
	height: 4em;
	flex: 1 0 auto;
	border: 0 solid;
	box-sizing: border-box;
	transition: 0.1s;
	background: var(--scol);
}
.color:focus, .color:hover {
	border-width: 0.25em 0;
}
.color:active {
	border-width: 0.5em 0;
}
.color:focus-visible {
	outline: 0;
}
.tabl {
	padding: 9px;
	background: var(--tcol);
	display: flex;
	justify-content: space-evenly;
	align-content: space-between;
	flex-wrap: wrap;
}
.tabl * {
	flex: 1 30%;
}
.tabl b {
	background: var(--tcol);
	padding: 9px;
	display: block;
	border: solid var(--pcol);
	border-width: 0.25em 0;
}
.tag {
	display: inline-block;
	background: #0ff3;
	color: var(--pcol);
	font-size: 1.25em;
	padding: 0.25em 0.25em 0;
	border-radius: 9px 9px 0 0;
	margin-left: 50%;
	transform: translateX(-50%);
}
.tag img {
	height: 16px;
	width: auto;
}
.tag img:active {
	outline-offset: 0;
}

/* blog stuff */
div.card {
	background: var(--tcol);
	padding: 0.5rem;
	margin: 1em 0 0;
}
.card p {
	margin: 1em 0 0;
}
.card img {
	width: 8em;
	height: auto;
}

/* mobile support */
@media(orientation:portrait) {
	.showcase > img, .viewport {flex: 100%}
	#img0bg, div.base, #img0 {width: 100%; height:auto}
	.tabl * {flex: 1 100%}
}

